<resources>
    <string name="app_name">VT-Ticket</string>
    <string name="nav_home">Trang chủ</string>
    <string name="nav_ticket">Vé</string>
    <string name="nav_noti">Thông báo</string>
    <string name="nav_profile">Cá nhân</string>
    <string name="city_confirm">Thành phố của bạn là </string>
    <string name="detail_tab">Thông tin</string>
    <string name="route_tab">Lộ trình</string>
    <string name="guide_tab">Hướng dẫn</string>
    <string name="username_hint">Tên đăng nhập</string>
    <string name="password_hint">Mật khẩu</string>
    <string name="login_button">Đăng nhập</string>
    <string name="register_button">Đăng ký</string>
    <string name="login_recommend">Đăng nhập hoặc đăng ký để sử dụng dịch vụ</string>
    <string name="ticket_change_day">Không thể đổi lịch sau khi đặt vé</string>
    <string name="ticket_refund">Để hủy vé và yêu cầu hoàn tiền, hãy lin hệ với Viettel Ticket</string>
    <string name="detail_title_1">Thông tin xe</string>
    <string name="detail_title_2">Dịch vụ</string>
    <string name="detail_title_3">Chính sách</string>
    <string name="detail_title_4">Đánh giá</string>
    <string name="cant_exchange">Không áp dụng đổi lịch</string>
    <string name="can_refund">Được hoàn tiền</string>
    <string name="car_name">Nhà xe:</string>
    <string name="car_capacity">Sức chứa:</string>
    <string name="car_type">Loại xe:</string>
    <string name="subtitle">Ticket</string>
</resources>