<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/list_bg"
    tools:context=".MainActivity">

    <!-- Profile Layout -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/layout_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="18dp">

            <!-- Avatar Section -->
            <ImageView
                android:id="@+id/image_view_avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:src="@drawable/profile"
                android:scaleType="centerCrop" />

            <!-- Name -->
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="8dp"
                android:text="John Doe"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <!-- Username -->
            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="8dp"
                android:text="johndoe123"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />

            <!-- Divider -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/darker_gray" />

            <!-- Birthdate -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Ngày sinh:"/>
            <TextView
                android:id="@+id/tv_dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="Ngày sinh: 25/12/1990"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!-- Gender -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Giới tính:"/>
            <TextView
                android:id="@+id/tv_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="Giới tính: Nam"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!-- CCCD -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Căn cước công dân:"/>
            <TextView
                android:id="@+id/tv_cccd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="CCCD: 0123456789"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!-- Email -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Email:"/>
            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="Email: johndoe@example.com"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- Not Logged In Layout -->
    <LinearLayout
        android:id="@+id/not_login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/login_recommend"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="15dp"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/viettel_red"
                android:padding="10dp"
                android:text="@string/register_button"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/viettel_red"
                android:padding="10dp"
                android:text="@string/login_button"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
